--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -314,6 +314,7 @@ button {
   position: fixed;
   bottom: 85px;
   right: 15px;
+  z-index: 1;
 
   img {
     width: 25px;
@@ -329,5 +330,9 @@ button {
     .section__text {
       font-size: 16px;
     }
+  }
+
+  .back_top {
+    bottom: 20px;
   }
 }
